# zfs-dmu-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  rust.yml
zfs-dmu-sys/: Cargo.toml  README.md  build.rs  wrapper.h
zfs-dmu-sys/src/: bindings.rs
